--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,20 @@ buildscript {
     }
 }
 
+plugins {
+    id 'net.ltgt.apt' version "0.9"
+    id 'maven-publish'
+    id 'application'
+    id 'java'
+    id 'maven'
+    id 'eclipse'
+    id 'idea'
+    id 'jacoco'
+}
+
 allprojects {
     repositories {
         jcenter()
         google()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
